Fix a few gpu tests on Android

Make GpuProcess.driver_bug_workarounds_upon_gl_renderer and
GpuProcess.no_gpu_process work on Android.

For other tests it does not make sense to run them on Android because
there is either no entry in kSoftwareRenderingListJson to trigger
or no multi gpu configuration.

About GpuProcess.skip_gpu_process, I could not reproduce the failure on
Nexus 4.

BUG=611930

R=kbr@chromium.org

TEST=./content/test/gpu/run_gpu_test.py gpu_process --browser android-content-shell
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Committed: https://crrev.com/bbe4c8a2279dcbd6ae3fb50e5b1b1858be883a0b [formerly a2c5030470e9cee3ae35dc849c680530c2acf06a]
Committed: https://crrev.com/a24dd38dc86629539017d8bd3e0bd4526cdd3371 [formerly b34180e4f1fb9d4813b1e88984d288bd50b05751]
Review-Url: https://codereview.chromium.org/2227893005
Cr-Original-Original-Commit-Position: refs/heads/master@{#410998}
Cr-Original-Commit-Position: refs/heads/master@{#411213}
Cr-Commit-Position: refs/heads/master@{#412522}

Former-commit-id: 47305c8a2024ae45a2ab870a1bf41f01a26c8ae5